<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/classroom">

    <TextView
        android:id="@+id/tx_piruma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piruma"
        android:layout_marginTop="80dp"
        android:textColor="@color/putihteks"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="45sp"
        android:layout_alignStart="@id/layout_emailpass" />

    <TextView
        android:id="@+id/tx_pgrtn"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/pengertian"
        android:layout_above="@+id/layout_emailpass"
        android:layout_below="@id/tx_piruma"
        android:textColor="@color/putihteks"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="15sp"
        android:layout_alignStart="@id/layout_emailpass"/>

    <LinearLayout
        android:id="@+id/layout_emailpass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColorHint="@color/hitamteks"
                android:fontFamily="@font/montserrat_light"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:background="@drawable/rectangle_9"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass_edittext"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hitamteks"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_light"
                android:background="@drawable/rectangle_9"/>
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/lktx_forgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textColor="@color/putihteks"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="55sp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round"
            android:backgroundTint="@color/merahbtn"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/putihteks"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_su"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/layout_emailpass"
        android:layout_marginTop="400dp">

        <TextView
            android:id="@+id/tx_noacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noacc"
            android:textColor="@color/putihteks"
            android:layout_below="@id/layout_emailpass"
            android:layout_alignStart="@id/layout_emailpass"/>

        <TextView
            android:id="@+id/lktx_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/putihteks"
            android:layout_below="@id/layout_emailpass"
            android:layout_marginStart="7sp"/>
    </LinearLayout>



</RelativeLayout>